# fem3d-rust-2

./: Cargo.toml  build-wasm.sh  instructions.md  start
.cargo/: config.toml
docs/: LIBRARY_USAGE.md  MESH_VISUALIZATION.md  TUNING_GUIDE.md
examples/: analysis_comparison.rs  cut_based_mesh.rs  mesh_export.rs  mesh_size_test.rs  solver_benchmark.rs  surrogate_demo.rs  undercut_diagnostic.rs
reference/: details.md
reference/thoughts/: Rust FEM 3D Modal.md
src/: assembly.rs  beam1d.rs  beam1d_solver.rs  beam2d.rs  beam2d_solver.rs  cuts.rs  element.rs  lib.rs  mesh.rs  modes.rs  solver.rs  types.rs  wasm.rs
src/optimization/: algorithm.rs  crossover.rs  hybrid.rs  materials.rs  mod.rs  mutation.rs  objective.rs  population.rs  sampling.rs  selection.rs  surrogate.rs  types.rs
tests/: integration_functions.rs  sapele_bar.rs  surrogate_tests.rs  wasm_browser.rs
web/: index.html  server.py
