[package]
name = "fem3d-rust-2"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["sprs-backend"]
sprs-backend = ["sprs"]

[dependencies]
nalgebra = "0.33"
nalgebra-sparse = "0.10"
sprs = { version = "0.11", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
