[package]
name = "fem3d-rust-2"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["sprs-backend", "parallel"]
sprs-backend = ["sprs"]
parallel = ["rayon"]
# Enable web worker multithreading for WASM (requires SharedArrayBuffer support)
parallel-wasm = ["parallel", "wasm-bindgen-rayon"]

[dependencies]
nalgebra = "0.33"
nalgebra-sparse = "0.10"
sprs = { version = "0.11", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"

# Rayon for native parallel processing
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = { version = "1.10", optional = true }

# WASM-specific dependencies with web worker multithreading support
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.108"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
rayon = { version = "1.10", optional = true }
# wasm-bindgen-rayon 1.2.1+ supports wasm-bindgen 0.2.93+
wasm-bindgen-rayon = { version = "1.2.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

# Disable wasm-opt since it requires external download
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

# Release profile optimizations for maximum performance
[profile.release]
lto = true              # Link-time optimization for better inlining across crates
codegen-units = 1       # Single codegen unit for better optimization
opt-level = 3           # Maximum optimization level
panic = "abort"         # Smaller code, no unwinding overhead

# Optimize dependencies in release builds
[profile.release.package."*"]
opt-level = 3

# Development profile with some optimizations for faster iteration
[profile.dev]
opt-level = 1           # Basic optimizations for reasonable dev performance

# Bench profile inherits from release but allows debugging
[profile.bench]
debug = true
